@@ -16,6 +16,7 @@ Now
  * Set maximum of object to calculate stack in Environment::Eval.
  * Add --enable-static to compile functions statically to avoid stack corruption.
  * Speedup output objects with setted width.
+ * Set maximum stack depth in Environment::Eval.
 
 Version 0.0.0.7 2010-12-01
  * Make GP::CheckForParam more strict.
